--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "uuid": "^9.0.1",
+    "vee-validate": "^4.11.8",
     "vue": "^3.2.13",
     "vuex": "^4.0.0"
   },
